<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".MainActivity">

    <Button
            android:id="@+id/one"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/two"
            app:layout_constraintTop_toBottomOf="@+id/four"
            app:layout_constraintBottom_toTopOf="@+id/placeholder" />

    <Button
            android:id="@+id/two"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/zero"
            app:layout_constraintTop_toBottomOf="@+id/five"
            app:layout_constraintStart_toEndOf="@+id/one"
            app:layout_constraintEnd_toStartOf="@+id/three" />

    <Button
            android:id="@+id/three"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/six"
            app:layout_constraintStart_toEndOf="@+id/two"
            app:layout_constraintBottom_toTopOf="@+id/point"
            app:layout_constraintEnd_toStartOf="@+id/plus" />

    <Button
            android:id="@+id/four"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/one"
            app:layout_constraintTop_toBottomOf="@+id/seven"
            app:layout_constraintEnd_toStartOf="@+id/five" />

    <Button
            android:id="@+id/five"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/six"
            app:layout_constraintBottom_toTopOf="@+id/two"
            app:layout_constraintTop_toBottomOf="@+id/eight"
            app:layout_constraintStart_toEndOf="@+id/four" />

    <Button
            android:id="@+id/six"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/three"
            app:layout_constraintTop_toBottomOf="@+id/nine"
            app:layout_constraintStart_toEndOf="@+id/five"
            app:layout_constraintEnd_toStartOf="@+id/minus" />

    <Button
            android:id="@+id/seven"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toTopOf="@+id/four"
            app:layout_constraintTop_toBottomOf="@+id/reset"
            app:layout_constraintEnd_toStartOf="@+id/eight"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/eight"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/delete"
            app:layout_constraintBottom_toTopOf="@+id/five"
            app:layout_constraintEnd_toStartOf="@+id/nine"
            app:layout_constraintStart_toEndOf="@+id/seven" />

    <Button
            android:id="@+id/nine"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/divide100"
            app:layout_constraintBottom_toTopOf="@+id/six"
            app:layout_constraintEnd_toStartOf="@+id/multiply"
            app:layout_constraintStart_toEndOf="@+id/eight" />

    <Button
            android:id="@+id/zero"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/two"
            app:layout_constraintEnd_toStartOf="@+id/point"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/placeholder" />

    <Button
            android:id="@+id/point"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/point"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/zero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/three"
            app:layout_constraintEnd_toStartOf="@+id/equals" />

    <Button
            android:id="@+id/reset"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/reset"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete"
            app:layout_constraintTop_toBottomOf="@+id/result"
            app:layout_constraintBottom_toTopOf="@+id/seven" />

    <Button
            android:id="@+id/delete"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/delete"
            android:textColor="@color/orange"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/result"
            app:layout_constraintEnd_toStartOf="@+id/divide100"
            app:layout_constraintBottom_toTopOf="@+id/eight"
            app:layout_constraintStart_toEndOf="@+id/reset" />

    <Button
            android:id="@+id/divide100"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/divide100"
            android:textColor="@color/orange"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/result"
            app:layout_constraintBottom_toTopOf="@+id/nine"
            app:layout_constraintEnd_toStartOf="@+id/divide"
            app:layout_constraintStart_toEndOf="@+id/delete" />

    <Button
            android:id="@+id/divide"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/divide"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result"
            app:layout_constraintBottom_toTopOf="@+id/multiply"
            app:layout_constraintStart_toEndOf="@+id/divide100" />

    <Button
            android:id="@+id/multiply"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/multiply"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@+id/divide"
            app:layout_constraintBottom_toTopOf="@+id/minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nine" />

    <Button
            android:id="@+id/minus"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/minus"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:layout_marginEnd="4dp"
            app:layout_constraintStart_toEndOf="@+id/six"
            app:layout_constraintTop_toBottomOf="@+id/multiply"
            app:layout_constraintBottom_toTopOf="@+id/plus"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:id="@+id/plus"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/plus"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/minus"
            app:layout_constraintBottom_toTopOf="@+id/equals"
            app:layout_constraintStart_toEndOf="@+id/three" />

    <Button
            android:id="@+id/equals"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:text="@string/equals"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/point"
            app:layout_constraintTop_toBottomOf="@+id/plus" />

    <Button
            android:id="@+id/placeholder"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/empty"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toStartOf="@+id/zero"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/one" />

    <EditText
            android:id="@+id/result"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:autofillHints="0.00"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/zeropointzero"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintVertical_bias="0.361" />


</androidx.constraintlayout.widget.ConstraintLayout>